<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/title_billing_details" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/accepted_cards_margin_top"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/name_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/basic_field_margin_side"
                android:layout_marginRight="@dimen/basic_field_margin_side"
                android:hint="@string/placeholder_name"
                app:errorTextAppearance="@style/Error">

                <com.checkout.android_sdk.Input.DefaultInput
                    android:id="@+id/name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUWXYZabcdefghijklmnopqrstuwxyz1234567890.- "
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:imeOptions="flagNoExtractUi|actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/country_input"
                    android:singleLine="true"
                    android:textColor="@color/card_view_details_text" />

            </android.support.design.widget.TextInputLayout>

            <com.checkout.android_sdk.Input.CountryInput
                android:id="@+id/country_input"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/basic_field_margin_side"
                android:layout_marginRight="@dimen/basic_field_margin_side"
                android:descendantFocusability="beforeDescendants"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:nextFocusForward="@+id/year_input"
                android:popupBackground="@color/spinner_background" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/address_one_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/basic_field_margin_side"
                android:layout_marginRight="@dimen/basic_field_margin_side"
                android:layout_marginTop="@dimen/basic_field_margin_top"
                android:hint="@string/placeholder_address_one"
                app:errorTextAppearance="@style/Error">

                <com.checkout.android_sdk.Input.AddressOneInput
                    android:id="@+id/address_one_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUWXYZabcdefghijklmnopqrstuwxyz1234567890. "
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:imeOptions="flagNoExtractUi|actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/address_two_input"
                    android:singleLine="true"
                    android:textColor="@color/card_view_details_text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/address_two_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/basic_field_margin_side"
                android:layout_marginRight="@dimen/basic_field_margin_side"
                android:layout_marginTop="@dimen/basic_field_margin_top"
                android:hint="@string/placeholder_address_two"
                app:errorTextAppearance="@style/Error">

                <com.checkout.android_sdk.Input.DefaultInput
                    android:id="@+id/address_two_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUWXYZabcdefghijklmnopqrstuwxyz1234567890. "
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:imeOptions="flagNoExtractUi|actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/city_input"
                    android:singleLine="true"
                    android:textColor="@color/card_view_details_text" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/city_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/basic_field_margin_side"
                android:layout_marginRight="@dimen/basic_field_margin_side"
                android:layout_marginTop="@dimen/basic_field_margin_top"
                android:hint="@string/placeholder_city"
                app:errorTextAppearance="@style/Error">

                <com.checkout.android_sdk.Input.DefaultInput
                    android:id="@+id/city_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUWXYZabcdefghijklmnopqrstuwxyz1234567890. "
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:imeOptions="flagNoExtractUi|actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/state_input"
                    android:singleLine="true"
                    android:textColor="@color/card_view_details_text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/state_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/basic_field_margin_side"
                android:layout_marginRight="@dimen/basic_field_margin_side"
                android:layout_marginTop="@dimen/basic_field_margin_top"
                android:hint="@string/placeholder_state"
                app:errorTextAppearance="@style/Error">

                <com.checkout.android_sdk.Input.DefaultInput
                    android:id="@+id/state_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUWXYZabcdefghijklmnopqrstuwxyz1234567890. "
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:imeOptions="flagNoExtractUi|actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/zipcode_input"
                    android:singleLine="true"
                    android:textColor="@color/card_view_details_text" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/zipcode_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/basic_field_margin_side"
                android:layout_marginRight="@dimen/basic_field_margin_side"
                android:layout_marginTop="@dimen/basic_field_margin_top"
                android:hint="@string/placeholder_postcode"
                app:errorTextAppearance="@style/Error">

                <com.checkout.android_sdk.Input.DefaultInput
                    android:id="@+id/zipcode_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUWXYZabcdefghijklmnopqrstuwxyz1234567890.- "
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:imeOptions="flagNoExtractUi|actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/phone_input"
                    android:singleLine="true"
                    android:textColor="@color/card_view_details_text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phone_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/basic_field_margin_side"
                android:layout_marginRight="@dimen/basic_field_margin_side"
                android:layout_marginTop="@dimen/basic_field_margin_top"
                android:hint="@string/placeholder_phone"
                app:errorTextAppearance="@style/Error">

                <com.checkout.android_sdk.Input.PhoneInput
                    android:id="@+id/phone_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789+- "
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:imeOptions="flagNoExtractUi|actionDone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/card_view_details_text" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_area"
                android:layout_marginTop="@dimen/basic_field_margin_top"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/clear_button"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginLeft="@dimen/basic_field_margin_side"
                    android:layout_marginRight="@dimen/basic_field_margin_side"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/button_clear"
                    android:textAllCaps="false" />


                <Button
                    android:id="@+id/done_button"
                    style="@style/ThemeOverlay.AppCompat.Dark"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginEnd="@dimen/basic_field_margin_side"
                    android:layout_marginRight="@dimen/basic_field_margin_side"
                    android:height="@dimen/button_height"
                    android:background="?attr/colorButtonNormal"
                    android:focusable="true"
                    android:text="@string/button_done"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/pay_button_text" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>