<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/title_card_details" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/accepted_cards_margin_top"
                        android:paddingLeft="@dimen/accepted_cards_margin_side"
                        android:paddingRight="@dimen/accepted_cards_margin_side"
                        android:text="@string/label_accepted_cards"
                        android:textColor="?attr/colorControlNormal"
                        android:textSize="@dimen/label_text_size" />

                </LinearLayout>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/cards_icons_view_height"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/cards_icons_view_margin_sides"
                    android:paddingRight="@dimen/cards_icons_view_margin_sides">

                    <LinearLayout
                        android:id="@+id/card_icons_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:layout_marginLeft="-3dp"
                        android:layout_marginStart="-3dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                    </LinearLayout>
                </HorizontalScrollView>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/card_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/basic_field_margin_side"
                    android:layout_marginRight="@dimen/basic_field_margin_side"
                    android:layout_marginTop="@dimen/basic_field_margin_top"
                    android:hint="@string/placeholder_card_number"
                    android:nextFocusForward="@+id/month_input"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/Error">

                    <com.checkout.android_sdk.Input.CardInput
                        android:id="@+id/card_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789 "
                        android:imeOptions="flagNoExtractUi|actionNext"
                        android:inputType="number"
                        android:maxLines="1"
                        android:nextFocusDown="@id/month_input" />

                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/accepted_cards_margin_top"
                    android:paddingLeft="@dimen/expiration_date_margin_side"
                    android:paddingRight="@dimen/expiration_date_margin_side"
                    android:text="@string/label_expiration_date"
                    android:textColor="?attr/colorControlNormal"
                    android:textSize="@dimen/label_text_size" />

                <LinearLayout
                    android:id="@+id/date_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/date_margin_bottom"
                    android:layout_marginLeft="@dimen/basic_field_margin_side"
                    android:layout_marginRight="@dimen/basic_field_margin_side"
                    android:layout_marginTop="@dimen/basic_field_margin_top"
                    android:orientation="horizontal">

                    <com.checkout.android_sdk.Input.MonthInput
                        android:id="@+id/month_input"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/basic_field_height"
                        android:layout_marginEnd="@dimen/basic_field_margin_side"
                        android:layout_marginRight="@dimen/basic_field_margin_side"
                        android:layout_weight="1"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:imeOptions="flagNoExtractUi|actionNext"
                        android:nextFocusDown="@id/year_input"
                        android:nextFocusForward="@+id/year_input"
                        android:popupBackground="@color/spinner_background" />

                    <com.checkout.android_sdk.Input.YearInput
                        android:id="@+id/year_input"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/basic_field_height"
                        android:layout_marginLeft="@dimen/basic_field_margin_side"
                        android:layout_marginStart="@dimen/basic_field_margin_side"
                        android:layout_weight="1"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:imeOptions="flagNoExtractUi|actionNext"
                        android:nextFocusDown="@id/card_input"
                        android:popupBackground="@color/spinner_background" />

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/cvv_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/basic_field_margin_side"
                    android:layout_marginRight="@dimen/basic_field_margin_side"
                    android:layout_marginTop="@dimen/basic_field_margin_top"
                    android:hint="@string/placeholder_cvv"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/Error">

                    <com.checkout.android_sdk.Input.DefaultInput
                        android:id="@+id/cvv_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789"
                        android:maxLength="4"
                        android:imeOptions="flagNoExtractUi|actionDone"
                        android:inputType="number"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/billing_helper_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/accepted_cards_margin_side"
                    android:paddingRight="@dimen/accepted_cards_margin_side"
                    android:text="@string/label_billing_details"
                    android:textColor="?attr/colorControlNormal"
                    android:textSize="@dimen/expiration_date_text_size" />

                <com.checkout.android_sdk.Input.BillingInput
                    android:id="@+id/go_to_billing"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/basic_field_height"
                    android:layout_marginLeft="@dimen/basic_field_margin_side"
                    android:layout_marginRight="@dimen/basic_field_margin_side"
                    android:layout_marginTop="@dimen/basic_field_margin_top"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:popupBackground="@color/spinner_background" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_area"
                    android:layout_marginTop="@dimen/basic_field_margin_top"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/pay_button"
                        style="@style/ThemeOverlay.AppCompat.Dark"
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/basic_field_margin_side"
                        android:layout_marginRight="@dimen/basic_field_margin_side"
                        android:height="@dimen/button_height"
                        android:background="?attr/colorButtonNormal"
                        android:focusable="true"
                        android:text="@string/button_pay"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/pay_button_text" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>
